Lab3/Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList
    9           | VarDec error ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec
   26         | error COMMA

   27 CompSt: LC DefList StmtList RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp error
   37     | error SEMI
   38     | RETURN Exp error
   39     | WHILE error RP
   40     | WHILE error RC

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList
   46        | Dec error DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp
   49    | VarDec ASSIGNOP error SEMI

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | Exp ASSIGNOP error
   69    | Exp AND error
   70    | Exp OR error
   71    | Exp RELOP error
   72    | Exp PLUS error
   73    | Exp MINUS error
   74    | Exp STAR error
   75    | Exp DIV error
   76    | MINUS error
   77    | NOT error
   78    | STAR DIV error
   79    | Exp LB error RB
   80    | Exp LB error SEMI

   81 Args: Exp COMMA Args
   82     | Exp
   83     | error COMMA


Terminals, with rules where they appear

$end (0) 0
error (256) 9 19 22 26 36 37 38 39 40 46 49 68 69 70 71 72 73 74 75
    76 77 78 79 80 83
INT (258) 18 66
FLOAT (259) 67
ID (260) 14 16 17 20 21 61 62 64 65
SEMI (261) 4 5 30 32 37 43 49 80
COMMA (262) 8 23 26 45 81 83
ASSIGNOP (263) 48 49 50 68
RELOP (264) 53 71
PLUS (265) 54 72
MINUS (266) 55 59 73 76
STAR (267) 56 74 78
DIV (268) 57 75 78
AND (269) 51 69
OR (270) 52 70
NOT (271) 60 77
DOT (272) 64
TYPE (273) 10
LP (274) 20 21 33 34 35 58 61 62
RP (275) 20 21 22 33 34 35 39 58 61 62
LB (276) 18 19 63 79 80
RB (277) 18 19 63 79
LC (278) 12 27
RC (279) 12 27 40
STRUCT (280) 12 13
RETURN (281) 32 38
IF (282) 33 34
ELSE (283) 34
WHILE (284) 35 39 40
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6, 右： 2
ExtDecList (35)
    左： 7 8 9, 右： 4 8 9
Specifier (36)
    左： 10 11, 右： 4 5 6 25 43
StructSpecifier (37)
    左： 12 13, 右： 11
OptTag (38)
    左： 14 15, 右： 12
Tag (39)
    左： 16, 右： 13
VarDec (40)
    左： 17 18 19, 右： 7 8 9 18 19 25 47 48 49
FunDec (41)
    左： 20 21 22, 右： 6
VarList (42)
    左： 23 24, 右： 20 23
ParamDec (43)
    左： 25 26, 右： 23 24
CompSt (44)
    左： 27, 右： 6 31
StmtList (45)
    左： 28 29, 右： 27 28
Stmt (46)
    左： 30 31 32 33 34 35 36 37 38 39 40, 右： 28 33 34 35
DefList (47)
    左： 41 42, 右： 12 27 41
Def (48)
    左： 43, 右： 41
DecList (49)
    左： 44 45 46, 右： 43 45 46
Dec (50)
    左： 47 48 49, 右： 44 45 46
Exp (51)
    左： 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80, 右： 30 32 33 34 35 36 38
    48 50 51 52 53 54 55 56 57 58 59 60 63 64 68 69 70 71 72 73 74
    75 79 80 81 82
Args (52)
    左： 81 82 83, 右： 61 81


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   22 FunDec: error . RP

    RP  shift, and go to state 20


State 14

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
    9           | VarDec . error ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB

    error  shift, and go to state 23
    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    SEMI  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  转到状态 27


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 7
    DefList          转到状态 29
    Def              转到状态 30


State 20

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 21

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 2

    Specifier        转到状态 33
    StructSpecifier  转到状态 7
    VarList          转到状态 34
    ParamDec         转到状态 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec error . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  转到状态 37
    VarDec      转到状态 17


State 24

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  转到状态 38
    VarDec      转到状态 17


State 25

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 26

   27 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 7
    DefList          转到状态 41
    Def              转到状态 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   43 Def: Specifier . DecList SEMI

    ID  shift, and go to state 36

    VarDec   转到状态 42
    DecList  转到状态 43
    Dec      转到状态 44


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 30

   41 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 7
    DefList          转到状态 46
    Def              转到状态 30


State 31

   26 ParamDec: error . COMMA

    COMMA  shift, and go to state 47


State 32

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 33

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  转到状态 48


State 34

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 35

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 24 (VarList)


State 36

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 37

    9 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 38

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 39

   19 VarDec: VarDec LB error . RB

    RB  shift, and go to state 51


State 40

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 41

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    STAR    shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 26
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    转到状态 64
    StmtList  转到状态 65
    Stmt      转到状态 66
    Exp       转到状态 67


State 42

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp
   49    | VarDec . ASSIGNOP error SEMI

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 25

    $default  reduce using rule 47 (Dec)


State 43

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 44

   44 DecList: Dec .
   45        | Dec . COMMA DecList
   46        | Dec . error DecList

    error  shift, and go to state 70
    COMMA  shift, and go to state 71

    SEMI  reduce using rule 44 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 47

   26 ParamDec: error COMMA .

    $default  reduce using rule 26 (ParamDec)


State 48

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 25 (ParamDec)


State 49

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 50

   23 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 33
    StructSpecifier  转到状态 7
    VarList          转到状态 72
    ParamDec         转到状态 35


State 51

   19 VarDec: VarDec LB error RB .

    $default  reduce using rule 19 (VarDec)


State 52

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 53

   37 Stmt: error . SEMI

    SEMI  shift, and go to state 73


State 54

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 55

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 56

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 65 (Exp)


State 57

   59 Exp: MINUS . Exp
   76    | MINUS . error

    error  shift, and go to state 75
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 76


State 58

   78 Exp: STAR . DIV error

    DIV  shift, and go to state 77


State 59

   60 Exp: NOT . Exp
   77    | NOT . error

    error  shift, and go to state 78
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 79


State 60

   58 Exp: LP . Exp RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 80


State 61

   32 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp error

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 81


State 62

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 82


State 63

   35 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . error RP
   40     | WHILE . error RC

    error  shift, and go to state 83
    LP     shift, and go to state 84


State 64

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 65

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 66

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    STAR    shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 26
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    转到状态 64
    StmtList  转到状态 86
    Stmt      转到状态 66
    Exp       转到状态 67


State 67

   30 Stmt: Exp . SEMI
   36     | Exp . error
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI

    error     shift, and go to state 87
    SEMI      shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


State 68

   48 Dec: VarDec ASSIGNOP . Exp
   49    | VarDec ASSIGNOP . error SEMI

    error  shift, and go to state 99
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 100


State 69

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 70

   46 DecList: Dec error . DecList

    ID  shift, and go to state 36

    VarDec   转到状态 42
    DecList  转到状态 101
    Dec      转到状态 44


State 71

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   转到状态 42
    DecList  转到状态 102
    Dec      转到状态 44


State 72

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 73

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 74

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    error  shift, and go to state 103
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 104

    Exp   转到状态 105
    Args  转到状态 106


State 75

   76 Exp: MINUS error .

    $default  reduce using rule 76 (Exp)


State 76

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    DOT   shift, and go to state 97
    LB    shift, and go to state 98

    $default  reduce using rule 59 (Exp)


State 77

   78 Exp: STAR DIV . error

    error  shift, and go to state 107


State 78

   77 Exp: NOT error .

    $default  reduce using rule 77 (Exp)


State 79

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI

    DOT  shift, and go to state 97
    LB   shift, and go to state 98

    $default  reduce using rule 60 (Exp)


State 80

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 108
    LB        shift, and go to state 98


State 81

   32 Stmt: RETURN Exp . SEMI
   38     | RETURN Exp . error
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI

    error     shift, and go to state 109
    SEMI      shift, and go to state 110
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


State 82

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 111


State 83

   39 Stmt: WHILE error . RP
   40     | WHILE error . RC

    RP  shift, and go to state 112
    RC  shift, and go to state 113


State 84

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 114


State 85

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 86

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 87

   36 Stmt: Exp error .

    $default  reduce using rule 36 (Stmt)


State 88

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 89

   50 Exp: Exp ASSIGNOP . Exp
   68    | Exp ASSIGNOP . error

    error  shift, and go to state 115
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 116


State 90

   53 Exp: Exp RELOP . Exp
   71    | Exp RELOP . error

    error  shift, and go to state 117
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 118


State 91

   54 Exp: Exp PLUS . Exp
   72    | Exp PLUS . error

    error  shift, and go to state 119
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 120


State 92

   55 Exp: Exp MINUS . Exp
   73    | Exp MINUS . error

    error  shift, and go to state 121
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 122


State 93

   56 Exp: Exp STAR . Exp
   74    | Exp STAR . error

    error  shift, and go to state 123
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 124


State 94

   57 Exp: Exp DIV . Exp
   75    | Exp DIV . error

    error  shift, and go to state 125
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 126


State 95

   51 Exp: Exp AND . Exp
   69    | Exp AND . error

    error  shift, and go to state 127
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 128


State 96

   52 Exp: Exp OR . Exp
   70    | Exp OR . error

    error  shift, and go to state 129
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 130


State 97

   64 Exp: Exp DOT . ID

    ID  shift, and go to state 131


State 98

   63 Exp: Exp LB . Exp RB
   79    | Exp LB . error RB
   80    | Exp LB . error SEMI

    error  shift, and go to state 132
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    STAR   shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 133


State 99

   49 Dec: VarDec ASSIGNOP error . SEMI

    SEMI  shift, and go to state 134


State 100

   48 Dec: VarDec ASSIGNOP Exp .
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 48 (Dec)


State 101

   46 DecList: Dec error DecList .

    $default  reduce using rule 46 (DecList)


State 102

   45 DecList: Dec COMMA DecList .

    $default  reduce using rule 45 (DecList)


State 103

   83 Args: error . COMMA

    COMMA  shift, and go to state 135


State 104

   62 Exp: ID LP RP .

    $default  reduce using rule 62 (Exp)


State 105

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI
   81 Args: Exp . COMMA Args
   82     | Exp .

    COMMA     shift, and go to state 136
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 82 (Args)


State 106

   61 Exp: ID LP Args . RP

    RP  shift, and go to state 137


State 107

   78 Exp: STAR DIV error .

    $default  reduce using rule 78 (Exp)


State 108

   58 Exp: LP Exp RP .

    $default  reduce using rule 58 (Exp)


State 109

   38 Stmt: RETURN Exp error .

    $default  reduce using rule 38 (Stmt)


State 110

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 111

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | Exp . ASSIGNOP error
   69    | Exp . AND error
   70    | Exp . OR error
   71    | Exp . RELOP error
   72    | Exp . PLUS error
   73    | Exp . MINUS error
   74    | Exp . STAR error
   75    | Exp . DIV error
   79    | Exp . LB error RB
   80    | Exp . LB error SEMI

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 138
    LB        shift, and go to state 98


State 112

   39 Stmt: WHILE error RP .

    $default  reduce using rule 39 (Stmt)


State 113

   40 Stmt: WHILE error RC .

    $default  reduce using rule 40 (Stmt)


State 114
